fixed button hover size on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -299,9 +299,9 @@ footer {
   color: #22283A;
   font-size: 2rem;
   text-align: center;
-  padding: 8px 0;
+  padding: 25px 0;
   border-radius: 5px;
-  width: 30%;
+  width: 100%;
   border: 1px solid #22283A;
   cursor: pointer;
 }
@@ -388,9 +388,9 @@ footer {
   color: #22283A;
   font-size: 2rem;
   text-align: center;
-  padding: 8px 0;
+  padding: 25px 0;
   border-radius: 5px;
-  width: 50%;
+  width: 100%;
   border: 1px solid #22283A;
   cursor: pointer;
 }
